Open Vehicle Monitor System v3 - Change log

????-??-?? ???  ???????  OTA release

2024-03-23 MB   3.3.004  OTA release
- MG EV Added support for MG5 (2020 - 2023) Short Range
- MG EV Added support for MG ZS EV (2023 - ) and MG5 (2020 - 2023) Long Range
- OVMS Server v3 metrics filtering
  New configs:
    [server.v3] metrics.include         -- Comma-separated list of metric names (with possible wildcard) matching metrics to send
    [server.v3] metrics.exclude         -- Comma-separated list of metric names (with possible wildcard) matching metrics to not send
- Renault Zoe Phase 2: Initial support
- Improved output of bms shell command for narrow windows.
  New commands:
    bms volt                            -- Output only voltage info if available
    bms temp                            -- Output only temperature info if available
- Hyundai Ioniq 5: Initial support
- Support for specifying units in scripts
  New commands:
    metrics units                       -- Display available unit identifiers
    metrics get                         -- Get at a particular metric value (with a specified unit)
  Extended commands:
    metrics set                         -- Support setting with a specified unit
  Extend functions
    OvmsMetrics.Value                   -- Optionally specify a unit (and make 'decode' work) and to get values with units.
    OvmsMetrics.GetValues               -- Optionally specify a unit to get values with units. 
    OvmsMetrics.AsFloat                 -- Optionally specify a unit
  New DukTape function
    OvmsMetrics.HasValue                -- Returns true if the metric has a valid value.
- Added power consumptions units:  kWhP100K,KPkWh,MPkWh
- Consolidate custom trip power consumption metrics to single value (kWhP100K)
  in Kia Niro and Kia Soul
- VFS: sorted directory listings & recursive directory listings
  New commands:
    vfs rls <path>                      -- List <path> and all subdirectory contents